# gb_emulator

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  main.cpp
include/: GBGame.h  GBMemory.h  game_boy.h  opcodes.h
include/graphics/: ppu.h
include/memory/: game.h  hram.h  memory.h  ram.h  rom.h  vram.h  wram.h
include/processor/: cpu.h
src/: GBGame.cpp  cpu.cc  game_boy.cc
src/graphics/: ppu.cc
src/memory/: game.cc  hram.cc  memory.cc  ram.cc  rom.cc  vram.cc  wram.cc
src/processor/: cpu.cc
tests/: test_game_boy.cc
tests/memory/: test_wram.cc
tests/processor/: test_cpu.cc
